Make login popup display correctly on small devices

--- a/css/style.css
+++ b/css/style.css
@@ -954,7 +954,7 @@ aside {
 }
 
 .login-box {
-  width: 700px;
+  width: auto;
   position: absolute;
   top: 30%;
   left: 50%;
@@ -1130,7 +1130,7 @@ aside {
     width: 100%;
     height: 50px;
     padding: 5px;
-    z-index: 5;
+    z-index: 0;
   }
   aside .mobile-wrapper {
     display: none;
@@ -1173,6 +1173,7 @@ aside {
   .container {
     width: 100%;
     left: 0;
+    z-index: -1;
   }
   .top-menu-wrapper {
     display: none;
@@ -1201,6 +1202,10 @@ aside {
   }
   .calendar button {
     margin: 0;
+  }
+  .login-box .login-details form {
+    -ms-flex-direction: column;
+        flex-direction: column;
   }
 }
 
