--- a/sass/media.scss
+++ b/sass/media.scss
@@ -4,7 +4,7 @@
     width: 100%;
     height: 50px;
     padding: 5px;
-    z-index: 5;
+    z-index: 0;
 
     .mobile-wrapper {
       display: none;
@@ -52,6 +52,7 @@
   .container {
     width: 100%;
     left: 0;
+    z-index: -1;
   }
 
   .top-menu-wrapper {
@@ -87,6 +88,14 @@
 
   .calendar button {
     margin: 0;
+  }
+
+  .login-box {
+    .login-details {
+      form {
+        flex-direction: column;
+      }
+    }
   }
 
 }
