--- a/sass/sections/_login.scss
+++ b/sass/sections/_login.scss
@@ -7,7 +7,7 @@
 }
 
 .login-box {
-  width: 700px;
+  width: auto;
   position: absolute;
   top: 30%;
   left: 50%;
